# Scratch

./: .gitignore  CMakeLists.txt  Readme.md  plan.todo
3rd/glfw/tests/: title.c
Apps/: CMakeLists.txt  RenderShowcase.cpp  RenderShowcase.h
Empty/: EmptyApplication.cpp
Framework/: CMakeLists.txt
Framework/Apps/: RenderShowcase.cpp
Framework/Common/: BaseApplication.cpp  BaseApplication.hpp  GraphicsManager.hpp  WindowApplication.cpp  WindowApplication.h  main.cpp
Framework/Interface/: IApplication.h  IApplication.hpp  IRuntimeModule.h  IRuntimeModule.hpp
Graphics/: BasicMeshUtil.cpp  BasicMeshUtil.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Constants.h  InternalFunctions.h  Material.cpp  Material.h  RenderManager.cpp  RenderManager.h  RenderObject.h  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  RenderTexture.cpp  RenderTexture.h  ShaderProgram.cpp  ShaderProgram.h  ShaderUtil.cpp  ShaderUtil.h  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h  VertexDataSource.h
Graphics/shaders/: PBRCommon.tinysl  axis_arrow.tinysl  basic_pbr.tinysl  blit.tinysl  common.tinysl
Platform/Linux/: compile.sh  helloengine_opengl.cpp  helloengine_xbc.c  helloengine_xcb  helloengine_xcb.c
Platform/Windows/: copy.ps.hlsl  copy.vs.hlsl  helloengine_d2d.cpp  helloengine_d3d.cpp  helloengine_win.c
