cmake_minimum_required (VERSION 3.1)
set (CMAKE_C_STANDARD 11)
set (CMAKE_CXX_STANDARD 11)
project(Scratch)

include_directories(3rd)
include_directories(3rd/glfw/include)
include_directories(3rd/glew-2.2.0/include)
include_directories(Graphics)
include_directories(Framework)

add_subdirectory(Framework)
add_subdirectory(Graphics)
add_subdirectory(Apps)
add_subdirectory(3rd/glfw)
add_subdirectory(3rd/glew-2.2.0/build/cmake)